<resources>
    <string name="app_name">Court Counter for American Football</string>
    <string name="teamA">Team A</string>
    <string name="points6">+6 Points</string>
    <string name="points3">+3 Points</string>
    <string name="points2">+2 Points</string>
    <string name="point1">+1 Point</string>
    <string name="flagsA">Flags Team A</string>
    <string name="flagsB">Flags Team B</string>
    <string name="teamB">Team B</string>
    <string name="reset">Reset</string>
</resources>
