<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/field3"
    android:orientation="vertical"
    tools:context="com.example.android.courtcounterforamericanfootball.MainActivity">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center_horizontal"
                android:padding="16dp"
                android:text="@string/teamA"
                android:textColor="@android:color/white"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/team_a_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal"
                android:paddingBottom="12dp"
                android:text="0"
                android:textColor="@android:color/white"
                android:textSize="56sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="@dimen/margin_left_right"
                android:layout_marginRight="@dimen/margin_left_right"
                android:onClick="add6points"
                android:text="@string/points6" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="@dimen/margin_left_right"
                android:layout_marginRight="@dimen/margin_left_right"
                android:onClick="add3points"
                android:text="@string/points3" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="@dimen/margin_left_right"
                android:layout_marginRight="@dimen/margin_left_right"
                android:onClick="add2points"
                android:text="@string/points2" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_left_right"
                android:layout_marginRight="@dimen/margin_left_right"
                android:onClick="add1points"
                android:text="@string/point1" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="52dp"
                android:layout_marginRight="@dimen/margin_left_right"
                android:layout_marginTop="19dp"
                android:text="@string/flagsA"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:textStyle="bold" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="@dimen/margin_left_right"
                android:orientation="horizontal">


                <Button
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:onClick="decrementTheamA"
                    android:text="-" />


                <TextView
                    android:id="@+id/flagsTheamA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:text="0"
                    android:textStyle="bold"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />

                <Button
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:onClick="incrementTheamA"
                    android:text="+" />

            </LinearLayout>
        </LinearLayout>

        <Button
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray"
            android:orientation="vertical" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center_horizontal"
                android:padding="16dp"
                android:text="@string/teamB"
                android:textColor="@android:color/white"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/team_b_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal"
                android:paddingBottom="12dp"
                android:text="0"
                android:textColor="@android:color/white"
                android:textSize="56sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="@dimen/margin_left_right"
                android:layout_marginRight="@dimen/margin_left_right"
                android:onClick="add6pointsB"
                android:text="@string/points6" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="@dimen/margin_left_right"
                android:layout_marginRight="@dimen/margin_left_right"
                android:onClick="add3pointsB"
                android:text="@string/points3" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="@dimen/margin_left_right"
                android:layout_marginRight="@dimen/margin_left_right"
                android:onClick="add2pointsB"
                android:text="@string/points2" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_left_right"
                android:layout_marginRight="@dimen/margin_left_right"
                android:onClick="add1pointsB"
                android:text="@string/point1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="52dp"
                android:layout_marginRight="@dimen/margin_left_right"
                android:layout_marginTop="19dp"
                android:text="@string/flagsB"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="@dimen/margin_left_right"
                android:orientation="horizontal">


                <Button
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:onClick="decrementTheamB"
                    android:text="-" />


                <TextView
                    android:id="@+id/flagsTheamB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:text="0"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:textSize="18sp" />

                <Button
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:onClick="incrementTheamB"
                    android:text="+" />

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="490dp"
        android:onClick="ResetButton"
        android:text="@string/reset" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_marginTop="470dp"
        android:background="@android:color/darker_gray"
        android:orientation="horizontal" />
</RelativeLayout>
</ScrollView>